tui/tests/snapshots/view_snapshots__command_palette_quit_light_40x8.snap
---
source: tui/tests/view_snapshots.rs
expression: "frame(&palette, Theme::Light, 40, 8)"
---
╭ Command palette ─────────────────────╮
│  Search  type to search              │
│  Showing 20–21 / 21 · ↑19            │
│    /help             Keyboard guide  │
│  › /quit             Exit safely     │
│    ↑/↓ select   Home/End edge        │
│    Enter run   Esc close             │
╰──────────────────────────────────────╯
