tui/tests/snapshots/view_snapshots__command_palette_quit_mono_160x28.snap
---
source: tui/tests/view_snapshots.rs
expression: "frame(&palette, Theme::Mono, 160, 28)"
---
                                Session 1  ·  Agent                                                                Agent running
                                           ╭ Command palette · 21 commands · type to filter · ↑/↓ · Enter · Esc ────╮
                                  › Summa  │    /new                Create session                                  │
                                    ✓  Ag  │    /sessions           Switch session                                  │
                                  ◆ Gariv  │    /jump               unavailable · fewer than two Turns are loaded   │
                                    ## Re  │    /inspect            Open Inspector                                  │
                                    • Ver  │    /status             Connection details                              │
                                    • Shi  │    /edit-prompt        Edit draft externally                           │
                                    cargo  │    /retry              unavailable · no unknown command                │
                                           │    /reconnect          Resume event stream                             │
                                           │    /cancel             Cancel running turn                             │
                                           │    /theme system       Follow terminal theme                           │
                                           │    /theme dark         Use dark theme                                  │
                                           │    /theme light        Use light theme                                 │
                                           │    /theme mono         Use mono theme                                  │
                                           │    /mouse auto         Use automatic mouse capture now                 │
                                           │    /mouse on           Enable mouse capture now                        │
                                           │    /mouse off          Disable mouse capture now                       │
                                           │    /copy last          Copy last completion                            │
                                           │    /copy selection     unavailable · no composer text is selected      │
                                           │    /copy session-id    Copy Session ID                                 │
                                           │    /help               Keyboard guide                                  │
                                           │  › /quit               Exit safely                                     │
                                           ╰────────────────────────────────────────────────────────────────────────╯


                                › Ask a follow-up…
                                  Esc cancel run
