tui/tests/snapshots/view_snapshots__command_palette_quit_mono_40x8.snap
---
source: tui/tests/view_snapshots.rs
expression: "frame(&palette, Theme::Mono, 40, 8)"
---
 Command palette · 18–21/21 ────────────
Search  type to search
  /copy selection   unavailable · no co…
  /copy session-id  Copy Session ID
  /help             Keyboard guide
› /quit             Exit safely
  ↑/↓ select   Home/End edge
  Enter run   Esc close
