tui/tests/snapshots/view_snapshots__command_suggestions_compact_mono_40x12.snap
---
source: tui/tests/view_snapshots.rs
expression: "command_suggestion_frame_at(Theme::Mono, 40, 12)"
---
Session 1

    ## Release plan
╭ Commands ────────────────────────────╮
│   /theme system  Follow terminal th… │
│ › /theme dark  Use dark theme        │
│   /theme light  Use light theme      │
│   /theme mono  Use mono theme        │
╰──────────────────────────────────────╯

› /theme
  Tab complete command
