tui/tests/snapshots/view_snapshots__command_suggestions_light_100x24.snap
---
source: tui/tests/view_snapshots.rs
expression: "command_suggestion_frame(Theme::Light)"
---

› Summarize the release plan.

• Completed
  └ Read file

## Release plan

  • Verify the Runtime
  • Ship with evidence

  cargo test passes.




 Commands ──────────────────────────────────────────────────────────────────────────────────────────
  /theme system  Follow terminal theme
› /theme dark  Use dark theme
  /theme light  Use light theme
  /theme mono  Use mono theme

› /theme
  Tab complete command                                                                   Session 1
