tui/tests/snapshots/view_snapshots__command_suggestions_mono_100x24.snap
---
source: tui/tests/view_snapshots.rs
expression: "command_suggestion_frame(Theme::Mono)"
---
  Session 1  ·  research-age

    You
      Summarize the release plan.

      ✓  Agent action · completed

    ◆ Garive
      ## Release plan
      • Verify the Runtime
      • Ship with evidence
      cargo test passes.


  ╭ Commands ────────────────────────────────────────────────────────────────╮
  │   /theme system  Follow terminal theme                                   │
  │ › /theme dark  Use dark theme                                            │
  │   /theme light  Use light theme                                          │
  │   /theme mono  Use mono theme                                            │
  ╰──────────────────────────────────────────────────────────────────────────╯
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮
  │ /theme                                                                                       │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯
    Tab complete command
