tui/tests/snapshots/view_snapshots__compact_40x12.snap
---
source: tui/tests/view_snapshots.rs
expression: "frame(&model, Theme::Mono, 40, 12)"
---
Session 1                  Agent running

    ✓ Agent action · completed
  ◆ Garive
    ## Release plan
    • Verify the Runtime
    • Ship with evidence
    cargo test passes.


› Ask a follow-up…
  Esc cancel run
