tui/tests/snapshots/view_snapshots__composer_selection_dark.snap
---
source: tui/tests/view_snapshots.rs
expression: "composer_selection_style_preview(Theme::Dark)"
---
"Selected" <fg=Reset bg=Magenta +NONE>
" tail" <fg=Reset bg=Reset +NONE>
