tui/tests/snapshots/view_snapshots__composer_selection_mono.snap
---
source: tui/tests/view_snapshots.rs
expression: "composer_selection_style_preview(Theme::Mono)"
---
"Selected" <fg=Reset bg=Reset +REVERSED>
" tail" <fg=Reset bg=Reset +NONE>
