tui/tests/snapshots/view_snapshots__composer_soft_wrap_compact_mono_40x16.snap
---
source: tui/tests/view_snapshots.rs
expression: "frame(&wrapped, Theme::Mono, 40, 16)"
---
Session 1                  Agent running

  › Summarize the release plan.
    ✓ Agent action · completed
  ◆ Garive
    ## Release plan

    • Verify the Runtime
    • Ship with evidence

    cargo test passes.


› Composer grows with soft wrapping and
  keeps every visible row.
  Esc cancel run
